feat: add configuration for netlify

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,35 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+
+const baseUrl = Astro.site.origin;
+const url = `${baseUrl}/apis/todos`;
+
+const response = await fetch(`${url}`);
+const data = await response.json();
+
+const posts = data.posts;
 ---
 <BaseLayout title="Hello Astro">
-	<h1 class="text-3xl">Hello World</h1>
+	<h1 class="text-3xl mx-auto">List of Posts</h1>
+	
+	<table>
+		<thead>
+			<tr>
+				<th class="border border-slate-600">Id</th>
+				<th class="border border-slate-600">UserId</th>
+				<th class="border border-slate-600">Title</th>
+				<th class="border border-slate-600">Body</th>
+			</tr>
+		</thead>
+		<tbody>
+			{posts.map(post => (
+				<tr>
+					<td class="border border-slate-600">{post.id}</td>
+					<td class="border border-slate-600">{post.userId}</td>
+					<td class="border border-slate-600">{post.title}</td>
+					<td class="border border-slate-600">{post.body}</td>
+				</tr>
+			))}
+		</tbody>
+	</table>
 </BaseLayout>
