--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 		<title>{title || "No Title"}</title>
 	</head>
 	<body>
-		<div class="p-4 min-w-full min-h-screen bg-gray-200">
+		<div class="p-4 min-w-full min-h-screen bg-gray-200 flex flex-col gap-4">
       <slot />
     </div>
 	</body>
